2005-02-10 Bogdan Gheorghe
	Fix for 75916: Errors and exceptions in log if you try create a C++ project with 
	same name/different case.
	Refactored CUIPlugin.errorDialog to take a boolean logError.
	
	* src/org/eclipse/cdt/ui/CUIPlugin.java
	* src/org/eclipse/cdt/ui/dialogs/TabFolderOptionBlock.java
	* src/org/eclipse/cdt/ui/wizards/NewCProjectWizard.java
	
2005-02-09 Alain Magloire
	PR 84841: Description of the template in the hover was incorrect.
	* src/org/eclipse/cdt/internal/ui/text/TemplateEngine.java

2005-02-06 Alain Magloire
	PR 84423, Patch from :  Tomaszewski Przemek
	Added keybinding next/previous(CTRL-SHIFT-UP/DOWN) to from
	member to member in the CEditor(PR 84423).

	* NEWS
	* plugin.properties
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	
2005-02-02 Bogdan Gheorghe
	Added a delete IProblem Markers action to context menu to allow users to manually
	remove problems reported by the parser during an index.
	
	* src/org/eclipse/cdt/internal/ui/util/DeleteIProblemMarkerAction.java
	* plugin.xml
	* plugin.properties
	
2005-01-29 Alain Magloire
	Fix for 81403: Move the Code Assist preference page
	out of the CEditor preference page.  It clean the CEditorPreferencePage
	and takes less time to instantiate.
	New checkbox in Code Assist to complete common prefix.
	+ src/org/eclipse/cdt/internal/ui/preferences/AbstracPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/prefernces/CEditorPreferencePage.java
	+ src/org/eclipse/cdt/internal/ui/preferences/CodeAssistPreferencge.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessage.java
	* src/org/eclipse/cdt/internal/ui/text/contentassist/ContentAssistPreference.java
	* src/org/eclipse/cdt/ui/CUIPrefernceInitializer.java
	* plugin.xml
	* plugin.properties
